--- a/services.html
+++ b/services.html
@@ -1,122 +1,211 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services – Fateh Digital Seva Kendra</title>
-
-  <!-- MAIN CSS (DO NOT CHANGE PATH) -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Services - Fateh Digital Seva Kendra</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <meta name="description" content="Fateh Digital Seva Kendra - Ghal Kalan, Moga. PAN, Aadhaar, certificates & prints">
+  <style>
+    /* small fallback so content shows even if external CSS fails */
+    body{font-family:Inter, system-ui, -apple-system, Roboto, "Helvetica Neue", Arial;margin:0;background:#f7fbff;color:#0b1426}
+    a{color:inherit;text-decoration:none}
+    /* keep this inline only for fallback; primary design comes from css/styles.css */
+  </style>
 </head>
+<body class="page-enter" id="body">
 
-<body>
-
-<!-- ================= HEADER ================= -->
-<header class="header">
-  <div class="header-brand" style="display:flex;align-items:center;gap:12px;">
+  <header class="header">
     <div class="header-logo">
+      <!-- logo file is in repo root: fateh-logo.png -->
       <img src="fateh-logo.png" alt="Fateh Digital Seva Kendra Logo" class="site-logo">
     </div>
+
     <div>
       <div class="site-title">Fateh Digital Seva Kendra</div>
       <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
     </div>
+
+    <div style="margin-left:auto;display:flex;gap:6px;align-items:center">
+      <!-- language single button (matches your header style) -->
+      <a href="index.html" style="text-decoration:none;color:#0b72d6;font-weight:700">EN</a>
+    </div>
+  </header>
+
+  <main class="container">
+
+    <!-- navigation buttons (same markup used on home) -->
+    <div style="margin-bottom:14px" class="grid-nav">
+      <a class="nav-circle" href="index.html">🏠 Home</a>
+      <a class="nav-circle" href="services.html">🧾 Services</a>
+      <a class="nav-circle" href="contact.html">📞 Contact</a>
+      <a class="nav-circle" href="about.html">ℹ️ About</a>
+      <a class="nav-circle" href="#" id="langJump3">🌐 Language</a>
+    </div>
+
+    <!-- HERO CARD: this is the white rounded box. 
+         It's placed BELOW the language nav so it looks EXACTLY like Home -->
+    <section class="hero-card" role="region" aria-label="Hero">
+      <h2>Our Services & Prices</h2>
+      <p class="small">Tap any service card to message on WhatsApp and order.</p>
+
+      <div class="cta" style="margin-top:12px">
+        <a class="hero-cta" href="services.html">See Services</a>
+        <a class="hero-cta" href="contact.html" style="background:#fff;color:#0b72d6;border:1px solid #dbeafe">Contact Us</a>
+      </div>
+    </section>
+
+    <h2 style="margin-top:0">Featured Services</h2>
+    <p class="small">Tap a service to open WhatsApp and start ordering</p>
+
+    <!-- Services grid -->
+    <div id="serviceGrid" class="services-grid">
+
+      <!-- sample card format: class & data-key -->
+      <div class="service-card" data-key="pan">
+        <div class="service-title">PAN Card</div>
+        <div class="service-desc">Apply & corrections</div>
+        <div class="service-price"><span class="price-badge">₹250</span></div>
+      </div>
+
+      <div class="service-card" data-key="aadhaar">
+        <div class="service-title">Aadhaar Print + Lamination</div>
+        <div class="service-desc">Printing & updates</div>
+        <div class="service-price"><span class="price-badge">₹80</span></div>
+      </div>
+
+      <div class="service-card" data-key="epfo">
+        <div class="service-title">EPFO Fund</div>
+        <div class="service-desc">Claims & withdrawal</div>
+        <div class="service-price"><span class="price-badge">₹150</span></div>
+      </div>
+
+      <div class="service-card" data-key="itr">
+        <div class="service-title">Income Tax Return (ITR)</div>
+        <div class="service-desc">Return filing</div>
+        <div class="service-price"><span class="price-badge">₹600</span></div>
+      </div>
+
+      <div class="service-card" data-key="caste">
+        <div class="service-title">Caste Certificate</div>
+        <div class="service-desc">Apply & track</div>
+        <div class="service-price"><span class="price-badge">₹300</span></div>
+      </div>
+
+      <div class="service-card" data-key="residence">
+        <div class="service-title">Residence Certificate</div>
+        <div class="service-desc">Verification help</div>
+        <div class="service-price"><span class="price-badge">₹250</span></div>
+      </div>
+
+      <div class="service-card" data-key="income">
+        <div class="service-title">Income Certificate</div>
+        <div class="service-desc">Apply & support</div>
+        <div class="service-price"><span class="price-badge">₹250</span></div>
+      </div>
+
+      <div class="service-card" data-key="rular">
+        <div class="service-title">Rular Certificate</div>
+        <div class="service-desc">Apply</div>
+        <div class="service-price"><span class="price-badge">₹300</span></div>
+      </div>
+
+      <div class="service-card" data-key="oldage">
+        <div class="service-title">Old Age Pension / Widow File</div>
+        <div class="service-desc">Apply & process</div>
+        <div class="service-price"><span class="price-badge">₹400</span></div>
+      </div>
+
+      <div class="service-card" data-key="deathbirth">
+        <div class="service-title">Death / Birth Certificate</div>
+        <div class="service-desc">Apply</div>
+        <div class="service-price"><span class="price-badge">₹300</span></div>
+      </div>
+
+      <div class="service-card" data-key="deathbirthlate">
+        <div class="service-title">Death/Birth Certificate Late Entry</div>
+        <div class="service-desc">Apply</div>
+        <div class="service-price"><span class="price-badge">₹500</span></div>
+      </div>
+
+      <div class="service-card" data-key="udhyam">
+        <div class="service-title">Udhyam Certificate</div>
+        <div class="service-desc">Apply</div>
+        <div class="service-price"><span class="price-badge">₹200</span></div>
+      </div>
+
+      <div class="service-card" data-key="5lakh">
+        <div class="service-title">5 Lakh Bima Card</div>
+        <div class="service-desc">Health insurance</div>
+        <div class="service-price"><span class="price-badge">₹100</span></div>
+      </div>
+
+      <div class="service-card" data-key="pmkyc">
+        <div class="service-title">PM Kisan - KYC</div>
+        <div class="service-desc">Verification</div>
+        <div class="service-price"><span class="price-badge">₹100</span></div>
+      </div>
+
+      <div class="service-card" data-key="pmkisannew">
+        <div class="service-title">PM Kisan - New File</div>
+        <div class="service-desc">Apply & claims</div>
+        <div class="service-price"><span class="price-badge">₹300</span></div>
+      </div>
+
+      <div class="service-card" data-key="voter">
+        <div class="service-title">Voter Card</div>
+        <div class="service-desc">Apply / corrections</div>
+        <div class="service-price"><span class="price-badge">₹200</span></div>
+      </div>
+
+      <div class="service-card" data-key="esharm">
+        <div class="service-title">Esharm Card</div>
+        <div class="service-desc">Apply</div>
+        <div class="service-price"><span class="price-badge">₹150</span></div>
+      </div>
+
+      <div class="service-card" data-key="photocopy">
+        <div class="service-title">Photocopy B/W</div>
+        <div class="service-desc">High quality copies</div>
+        <div class="service-price"><span class="price-badge">₹4 / sheet</span></div>
+      </div>
+
+      <div class="service-card" data-key="colour">
+        <div class="service-title">Colour Photocopy</div>
+        <div class="service-desc">Bright colour prints</div>
+        <div class="service-price"><span class="price-badge">₹10 / page</span></div>
+      </div>
+
+      <div class="service-card" data-key="resume">
+        <div class="service-title">Resume / CV Making</div>
+        <div class="service-desc">Professional resume</div>
+        <div class="service-price"><span class="price-badge">₹50</span></div>
+      </div>
+
+    </div> <!-- /services-grid -->
+
+    <div class="footer-note">Click a service card to message on WhatsApp and order.</div>
+
+  </main>
+
+  <!-- floating WhatsApp quick link -->
+  <div class="floating-whatsapp">
+    <a href="https://wa.me/919780010087" target="_blank">💬 WhatsApp</a>
   </div>
 
-  <div style="margin-left:auto;">
-    <span class="lang-btn">EN / हिंदी</span>
-  </div>
-</header>
-
-<!-- ================= MAIN ================= -->
-<main class="container">
-
-  <!-- ===== NAV BUTTONS (SAME AS HOME) ===== -->
-  <div class="grid-nav" style="margin-top:24px;">
-    <a class="nav-circle" href="index.html">🏠 Home</a>
-    <a class="nav-circle" href="services.html">🧾 Services</a>
-    <a class="nav-circle" href="contact.html">📞 Contact</a>
-    <a class="nav-circle" href="about.html">ℹ️ About</a>
-    <a class="nav-circle" href="#">🌐 Language</a>
-  </div>
-
-  <!-- ===== SERVICES INFO BOX (BELOW BUTTONS) ===== -->
-  <section class="hero-card" style="margin-top:24px;">
-    <h2>Our Services & Prices</h2>
-    <p class="small">
-      Tap any service to message on WhatsApp instantly.
-    </p>
-  </section>
-
-  <!-- ===== AVAILABLE SERVICES ===== -->
-  <h2 style="margin-top:18px;">Available Services</h2>
-  <p class="small">Tap a service to open WhatsApp with pre-filled message</p>
-
-  <div id="serviceGrid" class="services-grid">
-
-    <div class="service-card" data-title="PAN Card" data-price="₹250">
-      <div class="service-title">PAN Card</div>
-      <div class="service-desc">Apply / Correction</div>
-      <div class="service-price"><span class="price-badge">₹250</span></div>
-    </div>
-
-    <div class="service-card" data-title="Aadhaar Print & Lamination" data-price="₹80">
-      <div class="service-title">Aadhaar Print & Lamination</div>
-      <div class="service-desc">Printing & updates</div>
-      <div class="service-price"><span class="price-badge">₹80</span></div>
-    </div>
-
-    <div class="service-card" data-title="EPFO Services" data-price="₹150">
-      <div class="service-title">EPFO Services</div>
-      <div class="service-desc">Claims & withdrawal</div>
-      <div class="service-price"><span class="price-badge">₹150</span></div>
-    </div>
-
-    <div class="service-card" data-title="Income Tax Return (ITR)" data-price="₹600">
-      <div class="service-title">Income Tax Return (ITR)</div>
-      <div class="service-desc">Return filing</div>
-      <div class="service-price"><span class="price-badge">₹600</span></div>
-    </div>
-
-    <div class="service-card" data-title="Caste Certificate" data-price="₹300">
-      <div class="service-title">Caste Certificate</div>
-      <div class="service-desc">Apply & track</div>
-      <div class="service-price"><span class="price-badge">₹300</span></div>
-    </div>
-
-    <div class="service-card" data-title="Residence Certificate" data-price="₹250">
-      <div class="service-title">Residence Certificate</div>
-      <div class="service-desc">Verification help</div>
-      <div class="service-price"><span class="price-badge">₹250</span></div>
-    </div>
-
-    <div class="service-card" data-title="Income Certificate" data-price="₹250">
-      <div class="service-title">Income Certificate</div>
-      <div class="service-desc">Apply & support</div>
-      <div class="service-price"><span class="price-badge">₹250</span></div>
-    </div>
-
-    <div class="service-card" data-title="Resume / CV Making" data-price="₹350">
-      <div class="service-title">Resume / CV Making</div>
-      <div class="service-desc">Professional resume</div>
-      <div class="service-price"><span class="price-badge">₹350</span></div>
-    </div>
-
-  </div>
-</main>
-
-<!-- ===== WHATSAPP SCRIPT (SAFE) ===== -->
-<script>
-  const phone = "919780010087";
-  document.getElementById("serviceGrid").addEventListener("click", function(e) {
-    const card = e.target.closest(".service-card");
-    if (!card) return;
-    const title = card.dataset.title;
-    const price = card.dataset.price;
-    const msg = encodeURIComponent(`Hello, I want ${title} service (${price}).`);
-    window.location.href = `https://wa.me/${phone}?text=${msg}`;
-  });
-</script>
+  <script>
+    // phone and behaviour
+    const phone = "919780010087";
+    // send a text when service clicked
+    document.getElementById('serviceGrid').addEventListener('click', (e) => {
+      const card = e.target.closest('.service-card');
+      if (!card) return;
+      const title = card.querySelector('.service-title')?.textContent || 'a service';
+      const price = card.querySelector('.price-badge')?.textContent || '';
+      const msg = encodeURIComponent(`I want to apply for ${title} ${price}`.trim());
+      window.location.href = `https://wa.me/${phone}?text=${msg}`;
+    });
+  </script>
 
 </body>
 </html>
