--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="google-site-verification" content="wZmEP8qtbibFAtY_O8Zmjou-HBrYOC7_GfZE0kUmqNU" />
   <title>Fateh Digital Seva Kendra — Home</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="Fateh Digital Seva Kendra — Ghal Kalan, Moga. PAN, Aadhaar, certificates & printing.">
