--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <meta name="google-site-verification" content="wZmEP8qtbibFAtY_O8Zmjou-HBrYOC7_GfZE0kUmqNU" />
+  <meta name="google-site-verification" content="lzOn7VTXP16uAr_Z-FH8Fq-7AiUthvs_unnm_IxPFVk" />
   <title>Fateh Digital Seva Kendra — Home</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="Fateh Digital Seva Kendra — Ghal Kalan, Moga. PAN, Aadhaar, certificates & printing.">
@@ -19,9 +19,6 @@
       </div>
     </div>
 
-    <div style="margin-left:auto" id="langWrap">
-      <button class="lang-btn" id="langBtn">EN / हिंदी</button>
-    </div>
   </header>
 
   <main class="container">
@@ -31,23 +28,61 @@
       <a class="nav-circle" href="services.html"><span class="nav-icon">🧾</span><span>Services</span></a>
       <a class="nav-circle" href="contact.html"><span class="nav-icon">📞</span><span>Contact</span></a>
       <a class="nav-circle" href="about.html"><span class="nav-icon">ℹ️</span><span>About</span></a>
-      <a class="nav-circle" id="langJump" href="#"><span class="nav-icon">🌐</span><span>Language</span></a>
     </div>
 
     <!-- Latest Bharti (sticky) -->
-    <div class="notice-wrap">
-      <div class="notice" id="latestNotice">
-        <div>
-          <div class="title">🔔 SSC GD Constable Recruitment 2026 — Notification out for 25,487 Posts</div>
-          <div class="small">Click to apply — limited seats, contact now.</div>
-        </div>
-        <a class="cta" id="noticeCTA" href="#">Apply</a>
+      <div class="notice-wrap">
+
+<section class="latest-updates">
+  <h2>LATEST UPDATES</h2>
+
+  <div class="update-card">
+    <a href="psssbadvt.html">
+      <p class="update-title">
+        PSSSB Advt 13 of 2025 Requirement Notification out for 159 various posts
+      </p>
+      <div class="update-meta">
+        <span class="tag punjab">Punjab</span>
+        <span class="date">Click Here</span>
+      </div>
+    </a>
+  </div>
+
+  <div class="update-card">
+    <a href="psssb.html">
+      <p class="update-title">
+        PSSSB Clerk Recruitment 2025 Notification out for 70 Clerk and Clerk IT Posts
+      </p>
+      <div class="update-meta">
+        <span class="tag punjab">Punjab</span>
+        <span class="date">Click Here</span>
+      </div>
+    </a>
+  </div>
+
+  <div class="update-card">
+    <a href="sscgd.html">
+      <p class="update-title">
+        SSC GD Constable Recruitment 2026 Notification out for 25,487 Posts
+      </p>
+      <div class="update-meta">
+        <span class="tag all-india">All India Govt Jobs</span>
+        <span class="date">Click Here</span>
+      </div>
+    </a>
+  </div>
+
+</section>
+  </div>
+
+  </div>
+
       </div>
     </div>
 
     <section class="hero">
       <h1 id="heroTitle">Fateh Digital Seva Kendra</h1>
-      <p id="heroSub">Ghal Kalan, Moga — Government services partner</p>
+      <p id="heroSub">Ghal kalan, Moga — Government services partner</p>
       <div class="row" style="margin-top:8px">
         <a class="nav-circle" href="services.html" style="flex:0 0 auto; border-radius:10px; padding:10px 14px">See Services</a>
         <a class="nav-circle" href="contact.html" style="flex:0 0 auto; background:#fff;color:var(--deep-1);border:1px solid rgba(11,23,34,0.06)">Contact Us</a>
@@ -79,19 +114,26 @@
     <!-- bottom bar: socials + location -->
     <div class="bottom-bar">
       <div class="socials">
-        <a href="https://www.instagram.com/mr_mrs_ghali?igsh=ZGFxNGt0aXdwaDU2" target="_blank" rel="noopener">📸 Follow on Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=100070660671297&mibextid=JRoKGi" target="_blank" rel="noopener">👍 Follow on Facebook</a>
+        <a href="https://www.instagram.com/rehmat_digital_seva?igsh=aDVtOWIxaGJtdHRy">📸 Click to Follow on Instagram</a>
+    
       </div>
 
       <div class="location-row">
-        <div class="small">Address: Village Ghal Kalan, Punjab 142048, India</div>
+        <div class="small">Address: Village Ghal Kalan, Moga, Punjab 142048 caxaIndia</div>
         <div>
-          <a class="btn-loc" id="mapsBtn" href="#" target="_blank">🗺️ Open Location</a>
+          <a
+  class="btn-loc"
+  id="mapsBtn"
+  href="https://goo.gl/maps/Ezz8C1zDA64s7oFB7"
+  target="_blank"
+>
+📍 Open Location
+          </a>
         </div>
       </div>
     </div>
 
-    <div class="footer-note">© 2025 Fateh Digital Seva Kendra — Ghal Kalan, Moga</div>
+    <div class="footer-note">© 2025 Fateh Digital Seva Kendra — Chehlan Near Baba Balmik Mandir</div>
   </main>
 
   <a class="fab" id="whatsFab" href="#" target="_blank">💬 WhatsApp</a>
@@ -110,7 +152,7 @@ document.getElementById('noticeCTA').href = applyUrl;
 document.getElementById('whatsFab').href = `https://wa.me/${phone}?text=${encodeURIComponent('Hi, I have a query about services')}`;
 
 /* maps url for Ghal Kalan */
-const mapsUrl = 'https://www.google.com/maps/search/?api=1&query=Ghal+Kalan+Punjab+142048+India';
+const mapsUrl = 'https://goo.gl/maps/znxDkgdNHn8izdu97';
 document.getElementById('mapsBtn').href = mapsUrl;
 
 /* language toggle simple (switch main texts) */
@@ -119,13 +161,13 @@ let lang='en';
 const texts = {
   en:{
     heroTitle:'Fateh Digital Seva Kendra',
-    heroSub:'Ghal Kalan, Moga — Government services partner',
+    heroSub:'Ghal Kalan, Moga— Government services partner',
     notice:'🔔 SSC GD Constable Recruitment 2026 — Notification out for 25,487 Posts',
     applyBtn:'Apply'
   },
   hi:{
-    heroTitle:'फतेह डिजिटल सेवा केंद्र',
-    heroSub:'घल कलाँ, मोगा — सरकारी सेवा भागीदार',
+    heroTitle:'रहमत डिजिटल सेवा केंद्र',
+    heroSub: 'चेहला करीब बाबा बाल्मिकी मंदिर— सरकारी सेवा भागीदार',
     notice:'🔔 एसएससी जीडी कांस्टेबल भर्ती 2026 — 25,487 पदों की सूचना जारी',
     applyBtn:'आवेदन करें'
   }
