--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- bottom bar: socials + location -->
     <div class="bottom-bar">
       <div class="socials">
-        <a href="https://www.instagram.com/rehmat_digital_seva?igsh=aDVtOWIxaGJtdHRy">📸 Click to Follow on Instagram</a>
+        <a href="https://www.instagram.com/fateh_digital_seva_kendar_gk?igsh=MTNmYzBsMnZvMGlkdg==">📸 Click to Follow on Instagram</a>
     
       </div>
 
@@ -124,7 +124,7 @@
           <a
   class="btn-loc"
   id="mapsBtn"
-  href="https://goo.gl/maps/Ezz8C1zDA64s7oFB7"
+  href="https://maps.app.goo.gl/f5NzHCdfpfdsjYmY6"
   target="_blank"
 >
 📍 Open Location
@@ -152,7 +152,7 @@ document.getElementById('noticeCTA').href = applyUrl;
 document.getElementById('whatsFab').href = `https://wa.me/${phone}?text=${encodeURIComponent('Hi, I have a query about services')}`;
 
 /* maps url for Ghal Kalan */
-const mapsUrl = 'https://goo.gl/maps/znxDkgdNHn8izdu97';
+const mapsUrl = 'https://maps.app.goo.gl/f5NzHCdfpfdsjYmY6';
 document.getElementById('mapsBtn').href = mapsUrl;
 
 /* language toggle simple (switch main texts) */
