--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 
 <section class="latest-updates">
   <h2>LATEST UPDATES</h2>
+  
+    <div class="update-card">
+    <a href="rrbgroupd.html">
+      <p class="update-title">
+        RRB Group D 2026 Requirement Notification out for 22000 various posts
+      </p>
+      <div class="update-meta">
+        <span class="tag punjab">Punjab</span>
+        <span class="date">Click Here</span>
+      </div>
+    </a>
+    </div>
 
   <div class="update-card">
     <a href="mcjalandhar.html">
