--- a/rrbgroupd.html
+++ b/rrbgroupd.html
@@ -65,7 +65,15 @@ Reasoning: 30 Marks</td></tr>
 <p class="job-text">
 The notification for 22000 Group D posts in various zones of Indian Railways is released on 23 December 2025.
 </p>
+  <div class="big-space"></div>
 
+  <img 
+    src="rrbgroupd.png" 
+    alt="RRB Group D Notification 2026"
+    style="max-width:100%; height:auto; border:1px solid #ccc;"
+>
+
+  
 <div class="big-space"></div>
 
 <h1>RRB Group D Vacancies</h1>
