--- a/rrbgroupd.html
+++ b/rrbgroupd.html
@@ -68,7 +68,7 @@ The notification for 22000 Group D posts in various zones of Indian Railways is 
   <div class="big-space"></div>
 
   <img 
-    src="rrbgroupd.png" 
+    src="rrbgroupd.jpg" 
     alt="RRB Group D Notification 2026"
     style="max-width:100%; height:auto; border:1px solid #ccc;"
 >
