--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body class="page-enter" id="body">
 
   <header class="header">
-    <div class="header-brand">
-      <div class="header-logo">
+  <div class="header-brand">
+
     <img src="fateh-logo.png" alt="Fateh Digital Logo" class="site-logo">
-      <div>
-        <div class="site-title">Fateh Digital Seva Kendra</div>
-        <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
-      </div>
+
+    <div class="site-text">
+      <div class="site-title">Fateh Digital Seva Kendra</div>
+      <div class="header-sub">Official Services · Ghal Kalan, Moga</div>
     </div>
 
+  </div>
   </header>
 
   <main class="container">
