--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
   </div>
   </header>
 
+  <!-- Telecom Services Logos -->
+<div class="telecom-logos">
+  <a href="jio.html">
+    <img src="jio.png" alt="Jio Services">
+  </a>
+
+  <a href="airtel.html">
+    <img src="airtel.png" alt="Airtel Services">
+  </a>
+
+  <a href="vi.html">
+    <img src="vi.png" alt="VI Services">
+  </a>
+</div>
+  
   <main class="container">
     <!-- navigation circles (5 including language) -->
     <div class="grid-nav" id="navGrid">
